# github-mcp

./: README.md  github-mcp-VS-gitlab.md  how-to-use-2.txt  how-to-use.txt  project_what_todo.txt  prompts.txt  pyproject.toml  requirements.txt  test_server.py
examples/: README.md  demo_client.py  diagnose.py  individual_examples.py  interactive_demo.py  quick_test.py
examples/basic/: README.md  demo_client.py  individual_examples.py  interactive_demo.py  quick_test.py
examples/branch_management/: README.md  individual_examples.py  interactive_demo.py
examples/commit_history/: README.md  individual_examples.py  interactive_demo.py
examples/issues_and_prs/: README.md  SETUP.md  demo_issues_and_prs.py  individual_examples.py  interactive_demo.py  test_issue_creation.py
examples/repo_statistics/: README.md  individual_examples.py  interactive_demo.py
src/github_mcp/: __init__.py  server.py
